@startuml

title __STUDENTCURSORADAPTERS's Class Diagram__\n

  namespace com.jxust.tutor {
    namespace StudentCursorAdapters {
      class com.jxust.tutor.StudentCursorAdapters.BookingTutorCursorAdapter {
          ~ currencyFormatter : NumberFormat
          - mContext : Context
          + BookingTutorCursorAdapter()
          + bindView()
          + newView()
      }
    }
  }
  

  namespace com.jxust.tutor {
    namespace StudentCursorAdapters {
      class com.jxust.tutor.StudentCursorAdapters.HomeQuickBookCursorAdapter {
          ~ currencyFormatter : NumberFormat
          - mContext : Context
          + HomeQuickBookCursorAdapter()
          + bindView()
          + newView()
      }
    }
  }
  

  namespace com.jxust.tutor {
    namespace StudentCursorAdapters {
      class com.jxust.tutor.StudentCursorAdapters.SessionCursorAdapter {
          - mContext : Context
          + SessionCursorAdapter()
          + bindView()
          + newView()
      }
    }
  }
  

  com.jxust.tutor.StudentCursorAdapters.BookingTutorCursorAdapter -up-|> android.widget.CursorAdapter
  com.jxust.tutor.StudentCursorAdapters.HomeQuickBookCursorAdapter -up-|> android.widget.CursorAdapter
  com.jxust.tutor.StudentCursorAdapters.SessionCursorAdapter -up-|> android.widget.CursorAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
